孙艺云服务器后端
孙艺后端

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,16 @@
 server:
   port: 9090
-  ip: localhost
-
+  ip: 112.74.36.140
+#  ip: localhost
+  ssl:
+    key-store: classpath:server.jks
+    key-store-password: 2fidF55A
+    key-store-type: JKS
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/sunyi?serverTimezone=GMT%2b8
+#    url: jdbc:mysql://localhost:3306/sunyi?serverTimezone=GMT%2b8
+    url: jdbc:mysql://112.74.36.140:3306/sunyi?serverTimezone=GMT%2b8
     username: root
     password: admin123
   servlet:
@@ -16,5 +21,6 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: false
 mybatis:
   mapper-locations: classpath:mapper/*.xml
